syntax = "proto3";

package trading;

service TradingService {
  rpc PlaceOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string symbol = 1;
  double price = 2;
  int32 quantity = 3;
  string order_type = 4;
}

message OrderResponse {
  string status = 1;
  string message = 2;
}